@@ -1,3 +1,8 @@
+2006-01-28  Benoît Dejean  <benoit@placenet.org>
+
+	* gconf/gconf-schema.c:
+	* gconf/gconf-value.c: Got rid of padding members in private structs.
+
 2006-01-27  Tor Lillqvist  <tml@novell.com>
 
 	* gconf-zip.in: Include backend DLLs only in the runtime zipfile.
